# phoebe

./: .clang-tidy  .gitignore  BUILDING.md  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCIES.md  LICENSE  Makefile  OWNERS  README.md  SETUP.md  meson.build  meson_options.txt  phoebe-network.service  release.md  settings.json
.github/workflows/: ci.yml  rpmbuild.yml
conf/: meson.build  settings.json  settings.json.in
csv_files/: meson.build  rates.csv
headers/: algorithmic.h  filehelper.h  phoebe.h  plugins.h  stats.h  types.h  utils.h
imgs/: deployment_phoebe_excalidraw  phoebe_software_arch.excalidraw
scripts/: collect_stats.py  meson.build  sort_csv.sh
src/: algorithmic.c  data_tool.c  filehelper.c  meson.build  network_plugin.c  phoebe.c  stats.c  utils.c
tests/: find_gcc_libasan.sh  meson.build  run_tests.sh  settings.json  setup.sh  test.h  test_filehelper.c  unit_tests.c  writing_tests.md
