option(
  'print_messages', type : 'boolean', value : true,
  description : 'print the most important messages to stdout'
)
option(
  'print_advanced_messages', type : 'boolean', value : true,
  description : 'enable very verbose logging'
)
option(
  'print_table', type : 'boolean', value : false,
  description : 'prints to screen all data stored in the different tables maintained by the application'
)
option(
  'apply_changes', type : 'boolean', value : false,
  description : 'enable to apply the kernel settings via the sysctl command'
)
option(
  'check_initial_settings', type : 'boolean', value : true,
  description : 'when enabled, the application will never apply lower settings than the ones already applied on the system at bootstrap'
)
option(
  'm_threads', type : 'boolean', value : true,
  description : 'when enabled will run training using as many threads as cores are available on the machine'
)
option(
  'collector', type : 'feature', value : 'enabled',
  description : 'when enabled will build library requires for collect_stats.py, which is used to collect system metrics to train the AI model'
)
option(
  'with_tests', type : 'boolean', value : true,
  description : 'build and run the tests as well when enabled'
)
option(
  'use_linear_regression', type : 'boolean', value : true,
  description : 'Phoebe will use the linear regression algorithm when enabled'
)
option(
  'systemd_system_unit_dir', type : 'string',
  description : 'Folder into which phoebe.service is installed'
)
